// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Next/Flex Flex direction 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Flex Flex property on children 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
    >
      <div
        className="sc-gKsewC dWcnb sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Flex Flex wrap 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr fZtgtW"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Flex Justify 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr jkLErl"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Flex Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ kVavkb"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ fbFrZO"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ cIkyr"
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
    </div>
  </div>
</div>
`;
